--- a/ask/qa/templates/ask.html
+++ b/ask/qa/templates/ask.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
+<main class="container py-5">
     <h1>{{ title }}</h1>
     <form method="post" action="/ask/">
         {% csrf_token %}
@@ -14,5 +16,6 @@
     <p><div>User: {{ user }}</div>
     <div>Session: {{ session }} </div></p>
     <p><div><a href="/">Return to main page</a></div></p>
+</main>
 </body>
 </html>
