--- a/ask/qa/templates/question.html
+++ b/ask/qa/templates/question.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ question }}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
+<main class="container py-5">
     <h1>{{ question }}</h1>
     <p>{{ question.text }}<br>
     Author: {{ question.author }}<br>
@@ -29,5 +31,6 @@
     <div>Session: {{ session }} </div></p>
     <p><div><a href="/ask/">Ask a question</a></div></p>
     <p><div><a href="/">Return to main page</a></div></p>
+</main>
 </body>
 </html>
