--- a/ask/qa/templates/list.html
+++ b/ask/qa/templates/list.html
@@ -1,38 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-</head>
-<body>
-<main class="container py-5">
-    <h1>{{ title }}</h1>
+{% extends 'base.html' %}
+{% block title %}{{ title }}{% endblock %}
+{% block page %}{{ title }}{% endblock %}
+{% block content %}
     {% for question in page_obj %}
         <p><a href="{{ question.get_url }}">{{ question }}</a><br>
-            Author: {{ question.author }}<br>
-            Added: {{ question.added_at }}<br>
-            Rating: {{ question.rating }}<br>
-            Likes: {{ question.likes.count }}
+            Author: {{ question.author }}.
+            Added: {{ question.added_at }}
+            Rating: {{ question.rating }}.
+            Likes: {{ question.likes.count }}.
         </p>
     {% endfor %}
-<div class="pagination">
-    <span class="step-links">
-        {% if page_obj.has_previous %}
-            <a href="?page=1">&laquo; first</a>
-            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-        {% endif %}
+    <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
 
-        <span class="current">
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
         </span>
-
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">next</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-        {% endif %}
-    </span>
-</div>
-</main>
-</body>
-</html>
+    </div>
+{% endblock %}
