--- a/ask/qa/templates/ask.html
+++ b/ask/qa/templates/ask.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-</head>
-<body>
-<main class="container py-5">
-    <h1>{{ title }}</h1>
+{% extends 'base.html' %}
+{% block title %}{{ title }}{% endblock %}
+{% block page %}{{ title }}{% endblock %}
+{% block content %}
+<div class="container">
     <form method="post" action="/ask/">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Save</button>
+        {% for field in form %}
+            <div class="mb-3">
+                <label class="form-label">{{ field.label }}</label>
+                {% if field.name == 'title' %}
+                    <input type="text" name="{{ field.name }}" required class="form-control">
+                {% elif field.name == 'text' %}
+                    <textarea name="{{ field.name }}" required class="form-control" rows="3"></textarea>
+                {% endif %}
+            </div>
+        {% endfor %}
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    <p><div>User: {{ user }}</div>
-    <div>Session: {{ session }} </div></p>
-    <p><div><a href="/">Return to main page</a></div></p>
-</main>
-</body>
-</html>
+</div>
+{% endblock %}
