--- a/ask/qa/templates/ask.html
+++ b/ask/qa/templates/ask.html
@@ -7,12 +7,10 @@
         {% csrf_token %}
         {% for field in form %}
             <div class="mb-3">
-                <label class="form-label">{{ field.label }}</label>
-                {% if field.name == 'title' %}
-                    <input type="text" name="{{ field.name }}" required class="form-control">
-                {% elif field.name == 'text' %}
-                    <textarea name="{{ field.name }}" required class="form-control" rows="3"></textarea>
+                {% if not field.is_hidden %}
+                   <label class="form-label">{{ field.label }}</label>
                 {% endif %}
+                {{ field }}
             </div>
         {% endfor %}
         <button type="submit" class="btn btn-primary">Submit</button>
