--- a/ask/qa/templates/signup.html
+++ b/ask/qa/templates/signup.html
@@ -18,7 +18,7 @@
             </div>
         {% endfor %}
         {% for error in form.non_field_errors %}
-            <small class="form-text">{{ error|escape }}</small>
+            <small class="form-text text-danger">{{ error|escape }}</small>
         {% endfor %}
         <br>
         <button type="submit" class="btn btn-primary">Submit</button>
