--- a/ask/qa/templates/ask.html
+++ b/ask/qa/templates/ask.html
@@ -8,7 +8,7 @@
         {% for field in form %}
             <div class="mb-3">
                 {% if not field.is_hidden %}
-                   <label class="form-label">{{ field.label }}</label>
+                   <label class="form-label" for="{{ field.id_for_label }}">{{ field.label }}</label>
                 {% endif %}
                 {{ field }}
             </div>
